tests/import_export_equals/import_export_equals.exp
Error ------------------------------------------------------------------------------ lib/import_equals_in_libdef.js:10:1

Cannot use an import statement at the toplevel of a library file. Import statements may only appear inside a
`declare module`. The statement will be ignored. [unsupported-syntax]

   10| import F = require("lib_foo"); // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- import_equals_declaration.js:5:1

Cannot cast `Foo.x` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   import_equals_declaration.js:5:1
   5| Foo.x as empty; // ERROR
      ^^^^^

References:
   export_assignment.js:1:14
   1| export = {x: 42, y: "hello"};
                   ^^ [1]
   import_equals_declaration.js:5:10
   5| Foo.x as empty; // ERROR
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------- import_equals_qualified.js:2:1

`import ... = <QualifiedName>` syntax is not enabled. [unsupported-syntax]

   2| export import Bar = Foo.x; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- import_equals_qualified.js:3:18

Cannot resolve name `Bar`. [cannot-resolve-name]

   3| declare const y: Bar; // ERROR: `Bar` cannot be resolved because the qualified name import above is unsupported
                       ^^^



Found 4 errors
